add_subdirectory(device-sdk)

add_subdirectory(provision_plugin)
add_subdirectory(iot_broker)
add_subdirectory(iot_jobs_handler)
add_subdirectory(ipc_server)
add_subdirectory(lifecycle_ipc)
add_subdirectory(local_broker)
add_subdirectory(cli_server)
add_subdirectory(cloud_downloader)
add_subdirectory(tes_http_server_plugin)
add_subdirectory(log_manager)
add_subdirectory(gen_component_loader)
add_subdirectory(fleet_status_service)
add_subdirectory(authorization_handler)
add_subdirectory(mqtt_status_bridge)
