cmake_minimum_required(VERSION 3.25)
project(greengrass-lite)
set(TOP_BINARY_DIR ${PROJECT_BINARY_DIR})
add_subdirectory(nucleus-core)
add_subdirectory(sample-mqtt-user)
add_subdirectory(mqtt-plugin)
add_subdirectory(layered-plugin)

add_executable(greengrass-lite main.cpp)
target_link_libraries(greengrass-lite Threads::Threads ${CMAKE_DL_LIBS} nucleus-core)
target_include_directories(greengrass-lite PRIVATE .)
